--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -40,7 +40,7 @@ jobs:
       - name: Archive code coverage results
         uses: actions/upload-artifact@v4
         with:
-          name: code-coverage
+          name: code-coverage-${{github.sha}}
           path: unit_coverage.out
 
   code_coverage:
@@ -55,5 +55,5 @@ jobs:
     steps:
       - uses: fgrosse/go-coverage-report@v1.1.1
         with:
-          coverage-artifact-name: "code-coverage" # can be omitted if you used this default value
+          coverage-artifact-name: code-coverage-${{github.sha}}
           coverage-file-name: unit_coverage.out
