--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -40,7 +40,7 @@ jobs:
       - name: Archive code coverage results
         uses: actions/upload-artifact@v4
         with:
-          name: code-coverage-${{github.sha}}
+          name: code-coverage
           path: unit_coverage.out
 
   code_coverage:
@@ -56,5 +56,5 @@ jobs:
     steps:
       - uses: fgrosse/go-coverage-report@v1.1.1
         with:
-          coverage-artifact-name: code-coverage-${{github.sha}}
+          coverage-artifact-name: code-coverage
           coverage-file-name: unit_coverage.out
